--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "type": "module",
   "dependencies": {
     "express": "^4.19.2",
-    "ws": "^8.17.0",
-    "node-fetch": "^3.3.2"
+    "ws": "^8.17.0"
   },
-  "scripts": {
-    "start": "node server.js"
-  }
+  "scripts": { "start": "node server.js" }
 }
