--- a/package.json
+++ b/package.json
@@ -5,5 +5,7 @@
     "express": "^4.19.2",
     "ws": "^8.17.0"
   },
-  "scripts": { "start": "node server.js" }
+  "scripts": {
+    "start": "node server.js"
+  }
 }
